<resources>
    <string name="app_name">Roamly</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="belong_anywhere">Belong Anywhere</string>
    <string name="password_requirements">At least 8 characters, with uppercase, lowercase, number, and symbol.</string>
    <string name="profile_languages_helper">Choose the languages you use most to communicate.</string>
    <string name="profile_title">Profile</string>
    <string name="profile_subtitle">Keep your public card current.</string>
    <string name="profile_close">Close</string>
    <string name="profile_photo_content_description">Profile photo</string>
    <string name="profile_photo_edit">Edit photo</string>
    <string name="profile_photo_uploading">Updating...</string>
    <string name="profile_display_name_empty">Your name</string>
    <string name="profile_details_empty">Add a few details</string>
    <string name="profile_section_identity">Identity</string>
    <string name="profile_first_name_hint">First name</string>
    <string name="profile_last_name_hint">Last name</string>
    <string name="profile_age_initial">Age: 18</string>
    <string name="profile_age_value">Age: %1$d</string>
    <string name="profile_country_hint">Country</string>
    <string name="profile_category_hint">Category</string>
    <string name="profile_section_social">Social preferences</string>
    <string name="profile_vibe_label">Vibe</string>
    <string name="profile_vibe_chill">Chill</string>
    <string name="profile_vibe_party">Party</string>
    <string name="profile_languages_hint_field">Spoken languages</string>
    <string name="profile_languages_empty">No languages selected yet.</string>
    <string name="profile_interests_hint_field">Interests</string>
    <string name="profile_interests_helper">Add topics you like meeting around.</string>
    <string name="profile_interests_empty">No interests selected yet.</string>
    <string name="profile_visible">Visible to people nearby</string>
    <string name="profile_save">Save changes</string>
    <string name="profile_save_loading">Saving...</string>
    <string name="profile_account_title">Account</string>
    <string name="profile_change_password">Change password</string>
    <string name="profile_logout">Logout</string>
    <string name="auth_google_button">GOOGLE</string>
    <string name="auth_facebook_button">FACEBOOK</string>
    <string name="auth_callback_loading">Signing you in...</string>
    <string name="event_create_title">Create a new event</string>
    <string name="event_create_subtitle">Add the essentials so people know when, where, and how to join.</string>
    <string name="event_name_hint">Event name</string>
    <string name="event_name_helper">Example: Aperitivo with tapas</string>
    <string name="event_type_hint">Event type</string>
    <string name="event_type_helper">Choose the closest vibe.</string>
    <string name="event_interests_hint">Interests</string>
    <string name="event_interests_helper">Add topics people can connect around.</string>
    <string name="event_languages_hint">Spoken languages</string>
    <string name="event_languages_helper">Choose the languages people can use at the event.</string>
    <string name="event_age_title">Age range</string>
    <string name="event_age_value">Age: %1$d - %2$d</string>
    <string name="event_date_hint">Date</string>
    <string name="event_time_hint">Time</string>
    <string name="event_participants_title">Participants</string>
    <string name="event_participants_value">Participants: %1$d</string>
    <string name="event_create_button">Create event</string>
    <string name="event_select_date_title">Select date</string>
    <string name="event_select_time_title">Select time</string>
    <string name="event_name_required">Enter an event name.</string>
    <string name="event_type_required">Choose an event type.</string>
    <string name="event_date_required">Choose a date.</string>
    <string name="event_time_required">Choose a time.</string>
    <string name="event_auth_required">You need to sign in first.</string>
    <string name="event_create_success">Event created.</string>
    <string name="event_create_error">Could not create the event.</string>
    <string name="event_data_load_error">Could not load interests or languages.</string>
    <string name="event_type_chill">Chill</string>
    <string name="event_type_party">Party</string>
    <string name="event_type_aperitivo">Aperitivo</string>
    <string name="event_type_dinner">Dinner</string>
    <string name="event_type_coffee">Coffee</string>
    <string name="event_type_walk">Walk</string>
    <string name="event_type_sport">Sport</string>
    <string name="event_type_culture">Culture</string>
    <string name="event_type_networking">Networking</string>
    <string name="event_type_other">Other...</string>
    <string name="event_tooltip_title">%1$s - %2$s %3$s</string>
    <string name="event_tooltip_participants">%1$d/%2$s participants</string>
    <string name="event_tooltip_age">Age: %1$s - %2$s</string>
    <string name="event_date_unavailable">Date unavailable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
